// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox when checkbox is checked renders correctly 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <TouchableWithoutFeedback
      testID="checkbox"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderColor": "#d4d6db",
                "borderRadius": 4,
                "borderWidth": 2,
                "height": 24,
                "justifyContent": "center",
                "width": 24,
              },
              undefined,
              undefined,
              false,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#203054",
                "borderRadius": 4,
                "height": 24,
                "left": -2,
                "opacity": 1,
                "position": "absolute",
                "top": -2,
                "transform": Array [
                  Object {
                    "scale": 1,
                  },
                ],
                "width": 24,
              }
            }
          />
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 16,
                },
                Object {
                  "color": "white",
                  "opacity": 4,
                  "textShadowColor": "transparent",
                  "transform": Array [
                    Object {
                      "translateY": 0,
                    },
                    Object {
                      "scale": 1,
                    },
                  ],
                },
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
        <Text
          allowFontScaling={false}
          style={
            Array [
              undefined,
              Object {
                "color": "#203054",
                "fontFamily": "Lato",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 22,
              },
              false,
              Object {
                "marginLeft": 60,
              },
            ]
          }
        >
          Mom, I'm an engineer!
        </Text>
      </View>
    </TouchableWithoutFeedback>
  </View>
</View>
`;

exports[`Checkbox when checkbox is checked when checkbox is disabled renders correctly 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <TouchableWithoutFeedback
      testID="checkbox"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderColor": "#d4d6db",
                "borderRadius": 4,
                "borderWidth": 2,
                "height": 24,
                "justifyContent": "center",
                "width": 24,
              },
              Object {
                "backgroundColor": "#e3e4e8",
              },
              undefined,
              false,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#203054",
                "height": 24,
                "left": -2,
                "opacity": 0,
                "position": "absolute",
                "top": -2,
                "width": 24,
              }
            }
          />
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 16,
                },
                Object {
                  "color": "white",
                  "opacity": 4,
                  "textShadowColor": "transparent",
                  "transform": Array [
                    Object {
                      "translateY": 0,
                    },
                    Object {
                      "scale": 1,
                    },
                  ],
                },
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
        <Text
          allowFontScaling={false}
          style={
            Array [
              undefined,
              Object {
                "color": "#71798a",
                "fontFamily": "Lato",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 22,
              },
              false,
              Object {
                "marginLeft": 60,
              },
            ]
          }
        >
          Mom, I'm an engineer!
        </Text>
      </View>
    </TouchableWithoutFeedback>
  </View>
</View>
`;

exports[`Checkbox when checkbox is not checked renders correctly 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <TouchableWithoutFeedback
      testID="checkbox"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderColor": "#d4d6db",
                "borderRadius": 4,
                "borderWidth": 2,
                "height": 24,
                "justifyContent": "center",
                "width": 24,
              },
              undefined,
              undefined,
              false,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#203054",
                "borderRadius": 12,
                "height": 24,
                "left": -2,
                "opacity": 0,
                "position": "absolute",
                "top": -2,
                "transform": Array [
                  Object {
                    "scale": 0.8333333333333334,
                  },
                ],
                "width": 24,
              }
            }
          />
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 16,
                },
                Object {
                  "color": "white",
                  "opacity": 0,
                  "textShadowColor": "transparent",
                  "transform": Array [
                    Object {
                      "translateY": 2,
                    },
                    Object {
                      "scale": 0.85,
                    },
                  ],
                },
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
        <Text
          allowFontScaling={false}
          style={
            Array [
              undefined,
              Object {
                "color": "#203054",
                "fontFamily": "Lato",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 22,
              },
              false,
              Object {
                "marginLeft": 60,
              },
            ]
          }
        >
          Mom, I'm an engineer!
        </Text>
      </View>
    </TouchableWithoutFeedback>
  </View>
</View>
`;

exports[`Checkbox when checkbox is not checked when checkbox is disabled renders correctly 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <TouchableWithoutFeedback
      testID="checkbox"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderColor": "#d4d6db",
                "borderRadius": 4,
                "borderWidth": 2,
                "height": 24,
                "justifyContent": "center",
                "width": 24,
              },
              Object {
                "backgroundColor": "#e3e4e8",
              },
              undefined,
              false,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#203054",
                "height": 24,
                "left": -2,
                "opacity": 0,
                "position": "absolute",
                "top": -2,
                "width": 24,
              }
            }
          />
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 16,
                },
                Object {
                  "color": "white",
                  "opacity": 0,
                  "textShadowColor": "transparent",
                  "transform": Array [
                    Object {
                      "translateY": 2,
                    },
                    Object {
                      "scale": 0.85,
                    },
                  ],
                },
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
        <Text
          allowFontScaling={false}
          style={
            Array [
              undefined,
              Object {
                "color": "#71798a",
                "fontFamily": "Lato",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 22,
              },
              false,
              Object {
                "marginLeft": 60,
              },
            ]
          }
        >
          Mom, I'm an engineer!
        </Text>
      </View>
    </TouchableWithoutFeedback>
  </View>
</View>
`;
